--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
 <head>
 <title> </title>
+<style>
+h1 {
+position: absolue;
+top: 40px;
+width:100%;
+font-family:Helvetica;
+font-size: 100px;
+text-align: center;
+}
+</style>
 </head>
 	<body>
 	<h1>Bonjour</h1>
